@@ -199,6 +199,12 @@ public class InMemoryFileSystem extends ChecksumFileSystem {
       }
     }
   
+    /** This optional operation is not yet supported. */
+    public FSDataOutputStream append(Path f, int bufferSize,
+        Progressable progress) throws IOException {
+      throw new IOException("Not supported");
+    }
+
     /**
      * @param permission Currently ignored.
      */
